<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:text="@string/masukkan_dua_angka"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/etAngkaPertama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/masukkan_angka_pertama"
        android:inputType="number"
        android:autofillHints="" />
    <EditText
        android:id="@+id/etAngkaKedua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/masukkan_angka_kedua"
        android:inputType="number"
        android:autofillHints="" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">
        <!-- layout_weight = "1"
        memungkinkan view akan memenuhi ruang yang kosong -->
        <Button
            android:id="@+id/btTambah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tambah"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btKurang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/kurang"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btKali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/kali"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btBagi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/bagi"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    <Button
        android:id="@+id/btBersihkan"
        android:text="@string/bersihkan"
        android:layout_marginBottom="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="color"/>
    <TextView
        android:text="@string/hasil"
        android:textColor="#000"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tvHasil"
        android:text="@string/noll"
        android:textColor="#000"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>